syntax = "proto3";
package cosmos.quarantine.v1beta1;

import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/quarantine/v1beta1/quarantine.proto";
import "cosmos_proto/cosmos.proto";
import "google/api/annotations.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/quarantine";

// Deprecated: This package has moved to provenance/quarantine/v1.

// Query defines the quarantine gRPC query service.
//
// Deprecated: Switch to provenance/quarantine/v1.
service Query {
  // IsQuarantined checks if an account has opted into quarantine.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  rpc IsQuarantined(QueryIsQuarantinedRequest) returns (QueryIsQuarantinedResponse) {
    option (google.api.http).get = "/cosmos/quarantine/v1beta1/active/{to_address}";
  }

  // QuarantinedFunds gets information about funds that have been quarantined.
  //
  // If both a to_address and from_address are provided, any such quarantined funds will be returned regardless of
  // whether they've been declined. If only a to_address is provided, the unaccepted and undeclined funds waiting on a
  // response from to_address will be returned. If neither a to_address nor from_address is provided, all non-declined
  // quarantined funds for any address will be returned. The request is invalid if only a from_address is provided.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  rpc QuarantinedFunds(QueryQuarantinedFundsRequest) returns (QueryQuarantinedFundsResponse) {
    option (google.api.http) = {
      get: "/cosmos/quarantine/v1beta1/funds"
      additional_bindings: {
        get: "/cosmos/quarantine/v1beta1/funds/{to_address}"
      }
      additional_bindings: {
        get: "/cosmos/quarantine/v1beta1/funds/{to_address}/{from_address}"
      }
    };
  }

  // AutoResponses gets the auto-response settings for a quarantined account.
  //
  // The to_address is required. If a from_address is provided only the auto response for that from_address will be
  // returned. If no from_address is provided, all auto-response settings for the given to_address will be returned.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  rpc AutoResponses(QueryAutoResponsesRequest) returns (QueryAutoResponsesResponse) {
    option (google.api.http) = {
      get: "/cosmos/quarantine/v1beta1/auto/{to_address}"
      additional_bindings: {
        get: "/cosmos/quarantine/v1beta1/auto/{to_address}/{from_address}"
      }
    };
  }
}

// QueryIsQuarantinedRequest defines the RPC request for checking if an account has opted into quarantine.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QueryIsQuarantinedRequest {
  option deprecated = true;

  // to_address is the address to check.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string to_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
}

// QueryIsQuarantinedResponse defines the RPC response of an IsQuarantined query.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QueryIsQuarantinedResponse {
  option deprecated = true;

  // is_quarantined is true if the to_address has opted into quarantine.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  bool is_quarantined = 1 [deprecated = true];
}

// QueryQuarantinedFundsRequest defines the RPC request for looking up quarantined funds.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QueryQuarantinedFundsRequest {
  option deprecated = true;

  // to_address is the intended recipient of the coins that have been quarantined.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string to_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
  // from_address is the sender of the coins. If provided, a to_address must also be provided.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string from_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];

  // pagination defines optional pagination parameters for the request.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  cosmos.base.query.v1beta1.PageRequest pagination = 99 [deprecated = true];
}

// QueryQuarantinedFundsResponse defines the RPC response of a QuarantinedFunds query.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QueryQuarantinedFundsResponse {
  option deprecated = true;

  // quarantinedFunds is info about coins sitting in quarantine.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  repeated QuarantinedFunds quarantinedFunds = 1 [deprecated = true];

  // pagination defines the pagination parameters of the response.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  cosmos.base.query.v1beta1.PageResponse pagination = 99 [deprecated = true];
}

// QueryAutoResponsesRequest defines the RPC request for getting auto-response settings for an address.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QueryAutoResponsesRequest {
  option deprecated = true;

  // to_address is the quarantined account to get info on.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string to_address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];
  // from_address is an optional sender address to limit results.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  string from_address = 2 [(cosmos_proto.scalar) = "cosmos.AddressString", deprecated = true];

  // pagination defines optional pagination parameters for the request.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  cosmos.base.query.v1beta1.PageRequest pagination = 99 [deprecated = true];
}

// QueryAutoResponsesResponse defines the RPC response of a AutoResponses query.
//
// Deprecated: Switch to provenance/quarantine/v1.
message QueryAutoResponsesResponse {
  option deprecated = true;

  // auto_responses are the auto-response entries from the provided query.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  repeated AutoResponseEntry auto_responses = 1 [deprecated = true];

  // pagination defines the pagination parameters of the response.
  //
  // Deprecated: Switch to provenance/quarantine/v1.
  cosmos.base.query.v1beta1.PageResponse pagination = 99 [deprecated = true];
}
